--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div>
         <h3>Eliminar articulo</h3>
         <input type="text" id="codigoEliminar">
-        <button id="eliminar">Eliminar</button>
+        <button id="eliminarCodigo">Eliminar</button>
     </div>
 
 </body>
